fix:window环境下，执行命令需要加cmd.exe /c